apollo-federation/src/sources/connect/validation/snapshots/validation_tests@url_properties__invalid_mappings.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/url_properties/invalid_mappings.graphql
---
[
    Message {
        code: InvalidUrlProperty,
        message: "`@source(http:)` has invalid syntax in URL properties.\nThe `origin` argument is invalid: nom::error::ErrorKind::Eof: .\nThe `path` argument is invalid: nom::error::ErrorKind::Eof: .\nThe `queryParams` argument is invalid: nom::error::ErrorKind::Eof: .",
        locations: [
            9:15..9:18,
            10:13..10:16,
            11:20..11:23,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "`@connect(http:)` on `Query.resources` has invalid syntax in URL properties.\nThe `origin` argument is invalid: nom::error::ErrorKind::Eof: .\nThe `path` argument is invalid: nom::error::ErrorKind::Eof: .\nThe `queryParams` argument is invalid: nom::error::ErrorKind::Eof: .",
        locations: [
            20:17..20:20,
            21:15..21:18,
            22:22..22:25,
        ],
    },
]
