apollo-federation/src/sources/connect/validation/snapshots/validation_tests@url_properties__method.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/url_properties/method.graphql
---
[
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `method` is invalid: string values aren't valid here",
        locations: [
            12:45..12:52,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `method` is invalid: `*.other` must start with one of $config, $context",
        locations: [
            13:43..13:43,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `method` is invalid: number values aren't valid here",
        locations: [
            14:45..14:46,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `method` is invalid: object values aren't valid here",
        locations: [
            15:45..15:57,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `method` is invalid: string values aren't valid here",
        locations: [
            25:47..25:54,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `method` is invalid: `*.other` must start with one of $args, $config, $context",
        locations: [
            26:45..26:45,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `method` is invalid: number values aren't valid here",
        locations: [
            27:47..27:48,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `method` is invalid: object values aren't valid here",
        locations: [
            28:47..28:59,
        ],
    },
]
