apollo-federation/src/sources/connect/validation/snapshots/validation_tests@url_properties__no_base_url.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/url_properties/no_base_url.graphql
---
[]
