apollo-federation/src/sources/connect/validation/snapshots/validation_tests@url_properties__origin.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/url_properties/origin.graphql
---
[
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `origin` is invalid: `*.bad` must start with one of $config, $context",
        locations: [
            7:40..7:40,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `origin` is invalid: number values aren't valid here",
        locations: [
            10:42..10:43,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `origin` is invalid: null values aren't valid here",
        locations: [
            13:13..13:22,
            13:13..13:22,
            15:51..15:52,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `origin` is invalid: number values aren't valid here",
        locations: [
            13:27..13:30,
            13:24..13:30,
            16:51..16:52,
        ],
    },
]
