apollo-federation/src/sources/connect/validation/snapshots/validation_tests@url_properties__password.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/url_properties/password.graphql
---
[
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `password` is invalid: number values aren't valid here",
        locations: [
            6:44..6:48,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `password` is invalid: `*.bad` must start with one of $config, $context",
        locations: [
            7:42..7:42,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `password` is invalid: number values aren't valid here",
        locations: [
            13:49..13:53,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `password` is invalid: number values aren't valid here",
        locations: [
            12:27..12:30,
            12:24..12:30,
            15:53..15:54,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `password` is invalid: number values aren't valid here",
        locations: [
            12:35..12:40,
            12:32..12:40,
            16:53..16:54,
        ],
    },
]
