apollo-federation/src/sources/connect/validation/snapshots/validation_tests@url_properties__path.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/url_properties/path.graphql
---
[
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `path` is invalid: `*.bad` must start with one of $config, $context",
        locations: [
            7:38..7:38,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `path` is invalid: string values aren't valid here",
        locations: [
            8:40..8:45,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `path` is invalid: object values aren't valid here",
        locations: [
            9:40..9:52,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `path` is invalid: `*.bad` must start with one of $args, $config, $context",
        locations: [
            23:43..23:43,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `path` is invalid: string values aren't valid here",
        locations: [
            24:45..24:50,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `path` is invalid: object values aren't valid here",
        locations: [
            25:45..25:57,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `path` is invalid: string values aren't valid here",
        locations: [
            12:16..12:22,
            12:13..12:22,
            27:49..27:50,
        ],
    },
]
