apollo-federation/src/sources/connect/validation/snapshots/validation_tests@url_properties__port.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/url_properties/port.graphql
---
[
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `port` is invalid: `*.bad` must start with one of $config, $context",
        locations: [
            7:38..7:38,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `port` is invalid: string values aren't valid here",
        locations: [
            9:40..9:46,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `port` is invalid: string values aren't valid here",
        locations: [
            12:16..12:22,
            12:13..12:22,
            14:49..14:50,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `port` is invalid: number values aren't valid here",
        locations: [
            12:35..12:40,
            12:32..12:40,
            16:49..16:50,
        ],
    },
]
