apollo-federation/src/sources/connect/validation/snapshots/validation_tests@url_properties__query.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/url_properties/query.graphql
---
[
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `query` is invalid: `*.bad` must start with one of $config, $context",
        locations: [
            11:39..11:39,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `query` is invalid: array values aren't valid here",
        locations: [
            12:41..12:43,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `query` is invalid: string values aren't valid here",
        locations: [
            13:41..13:46,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `query` is invalid: `*.bad` must start with one of $args, $config, $context",
        locations: [
            23:44..23:44,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `query` is invalid: string values aren't valid here",
        locations: [
            24:46..24:51,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `query` is invalid: array values aren't valid here",
        locations: [
            25:46..25:53,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `query` is invalid: string values aren't valid here",
        locations: [
            16:16..16:22,
            16:13..16:22,
            27:50..27:51,
        ],
    },
]
