apollo-federation/src/sources/connect/validation/snapshots/validation_tests@url_properties__query_params.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/url_properties/query_params.graphql
---
[
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(name: \"v3\")`, argument `queryParams` is invalid: `*.bad` must start with one of $config, $context, $request",
        locations: [
            11:45..11:48,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(name: \"v4\")`, argument `queryParams` is invalid: array values aren't valid here",
        locations: [
            12:47..12:49,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(name: \"v5\")`, argument `queryParams` is invalid: string values aren't valid here",
        locations: [
            13:47..13:52,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect` on `Query.resources`, argument `queryParams` is invalid: `*.bad` must start with one of $args, $config, $context, $request",
        locations: [
            32:39..32:42,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect` on `Query.resources`, argument `queryParams` is invalid: string values aren't valid here",
        locations: [
            37:41..37:46,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect` on `Query.resources`, argument `queryParams` is invalid: array values aren't valid here",
        locations: [
            42:41..42:48,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect` on `Query.resources`, argument `queryParams` is invalid: string values aren't valid here",
        locations: [
            16:16..16:22,
            16:13..16:22,
            52:45..52:46,
        ],
    },
]
