apollo-federation/src/sources/connect/validation/snapshots/validation_tests@url_properties__scheme.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/url_properties/scheme.graphql
---
[
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `scheme` is invalid: `*.bad` must start with one of $config, $context",
        locations: [
            9:40..9:40,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `scheme` is invalid: string values aren't valid here",
        locations: [
            10:42..10:48,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `scheme` is invalid: number values aren't valid here",
        locations: [
            11:42..11:43,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `scheme` is invalid: string values aren't valid here",
        locations: [
            14:16..14:22,
            14:13..14:22,
            17:51..17:52,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `scheme` is invalid: number values aren't valid here",
        locations: [
            14:27..14:30,
            14:24..14:30,
            18:51..18:52,
        ],
    },
]
