apollo-federation/src/sources/connect/validation/snapshots/validation_tests@url_properties__user.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/url_properties/user.graphql
---
[
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `user` is invalid: number values aren't valid here",
        locations: [
            6:40..6:44,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@source(http:)`, argument `user` is invalid: `*.bad` must start with one of $config, $context",
        locations: [
            7:38..7:38,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `user` is invalid: number values aren't valid here",
        locations: [
            13:45..13:49,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `user` is invalid: number values aren't valid here",
        locations: [
            12:27..12:30,
            12:24..12:30,
            15:49..15:50,
        ],
    },
    Message {
        code: InvalidUrlProperty,
        message: "In `@connect(http:)` on `Query.resources`, argument `user` is invalid: number values aren't valid here",
        locations: [
            12:35..12:40,
            12:32..12:40,
            16:49..16:50,
        ],
    },
]
